--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-    http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>vn.viettuts</groupId>
-    <artifactId>qlsv-swing</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>C500.Register</groupId>
+    <artifactId>DangKyMonHoc</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>qlsv</name>
-    <url>http://maven.apache.org</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source> <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
     <dependencies>
         <!-- JAXB API -->
         <dependency>
@@ -28,7 +23,7 @@
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.3.4</version>
+            <version>2.3.8</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -36,23 +31,98 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>4.1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.poi</groupId>
+        <artifactId>poi-ooxml</artifactId>
+        <version>4.1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.knowm.xchart</groupId>
+        <artifactId>xchart</artifactId>
+        <version>3.8.7</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jfree</groupId>
+        <artifactId>jfreechart-fx</artifactId>
+        <version>1.0.1</version>
+    </dependency>
     </dependencies>
-    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <exec.mainClass>c500.register.controller.DangKyMonHoc</exec.mainClass>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <name>DangKyMonHoc17</name>
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>vn.viettuts.qlsv.App</mainClass> <!-- Replace with your fully qualified main class name -->
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-        </plugins>
+
+    <plugins>
+
+    <plugin>
+
+    <artifactId>maven-assembly-plugin</artifactId>
+
+    <version>2.4</version>
+
+    <configuration>
+
+    <descriptorRefs>
+
+    <descriptorRef>jar-with-dependencies</descriptorRef>
+
+    </descriptorRefs>
+
+    <archive>
+
+    <manifest>
+
+    <mainClass>qlsv.register.app.App</mainClass>
+
+    </manifest>
+
+    </archive>
+
+    </configuration>
+
+    <executions>
+
+    <execution>
+
+    <id>test</id>
+
+    <phase>package</phase>
+
+    <goals>
+
+    <goal>single</goal>
+
+    </goals>
+
+    </execution>
+
+    </executions>
+
+    </plugin>
+
+    </plugins>
+
     </build>
 </project>
